     miss style information (The_PHP_Jedi, BenBE)
  -  Missing tab width information could lead to warnings (BenBE)
  -  Missing symbol information for ASP (SF#1952038, nfsupport, BenBE)
  -  Empty delimiter message with OOoBasic (BenBE, Ccornell)
  -  Escaping of comments in LaTeX ignored (SF#1749806, BenBE)
  -  Modified Math environment $$ in LaTeX to be non-greedy (BenBE)
Version 1.0.7.21
  -  Added language files
     * Basic4GL (Matthew Webb)
  -  Fixed problem with mIRC language highlighting spaces only (BenBE)
  -  Language files can now specify a function to be called to decide the
     colour of a regular expression match
  -  Added single quote to Lua (Darrin Roenfanz)
  -  Compare comments case insensitively (fixes AutoIT comments somewhat)
     (Daniel Gordon)
  -  Fixed symbols not being highlighted at all (SF #1767953, BenBE)
  -  Fixed brackets not correctly managed (SF #1767954, BenBE)
  -  Changed default languages for some extensions
  -  Included color and character information for symbol highlighting in some languages (BenBE)
  -  Fixed a problem with extension detection if default was used (BenBE)
  -  Fixed a highlighting problem with the LaTeX language (SF #1776182, BenBE)
  -  Added a new parameter for enable_highlighting to reduce source duplication (SF #1786104, BenBE)
  -  Updated doxygen documentation to include since tags and some missing parameters
  -  Disabled symbol highlighting by default (doesn't affect brackets, cf. documentation) (BenBE)
  -  Added a check for set_case_keywords for the given param to be supported (BenBE)
  -  Minor rework of the HTML documentation layout \ W3C compliance (BenBE)
  -  Fixed highlighting error in bash language avoiding keywords in comments (SF #1786314, SF #1564839, BenBE)
  -  Fixed template params for C++ and C# not being highlighted (SF #1772919, BenBE)
  -  Fixed more reported problems about mirc highlighting
  -  Added some missing keywords for VB.NET